pkl-core/src/test/files/LanguageSnippetTests/input/errors/functionNotFoundInScope.pkl
function fooa() = 42
function foob(x) = 42
fooc = 42
function other() = 42

res1 = foox()